<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="section_my_collections">My Collections</string>

    <string name="title_spell_collections">Spells</string>
    <string name="btn_spell_collections">Spells</string>
    <string name="title_item_collections">Magical items</string>
    <string name="btn_item_collections">Magical items</string>
    <string name="title_bestiary_collections">Bestiaries</string>
    <string name="btn_bestiary_collections">Bestiaries</string>

    <string name="title_create_collection">New Collection</string>
    <string name="btn_create_collection">Create</string>
    <string name="btn_add_to_collection">Add to a collection</string>
    <string name="title_save_to_collection">Save to...</string>

    <string name="hint_collection_name">Collection name</string>

    <string name="btn_confirm">Confirm</string>
    <string name="btn_cancel">Cancel</string>

    <string name="message_collection_is_empty">The collection is empty</string>

    <string name="error_while_loading_collections">Error while loading collections.</string>
    <string name="error_while_loading_collection">Error while loading collection.</string>

    <string name="snackbar_removed_from_collection">'%1$s' was removed from the collection</string>
    <string name="snackbar_error_removing_from_collection">Error removing '%1$s' from the collection.</string>
    <string name="snackbar_collection_deleted">Collection '%1$s' was deleted</string>
    <string name="snackbar_error_deleting_collection">Error deleting collection '%1$s'.</string>
    <string name="snackbar_error_creating_collection">Error creating collection '%1$s'.</string>
    <string name="snackbar_error_renaming_collection">Error renaming the collection.</string>
    <string name="btn_undo">Undo</string>

    <string name="empty_collection_browse_spells">Browse spells</string>
    <string name="empty_collection_browse_creatures">Browse creatures</string>
    <string name="empty_collection_browse_magical_items">Browse magical items</string>

    <string name="time_ago_now">Just now</string>

    <string name="btn_rename_collection">Rename</string>
    <string name="dialog_rename_collection_title">Rename collection</string>
</resources>
