<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">TTRPG Companion</string>

    <string name="btn_back">Back</string>
    <string name="btn_more">More</string>

    <!--  Campaign  -->
    <string name="title_campaign_list">Campaigns</string>
    <string name="title_create_campaign">New Campaign</string>
    <string name="label_campaign_name">Campaign name</string>
...
