<?xml version="1.0" encoding="utf-8"?>

<resources>
    <!-- Home -->
    <string name="btn_campaign_list">Campaigns</string>
    <string name="btn_character_sheets">Character sheets</string>
    <string name="btn_spell_book">Spellbook</string>
    <string name="btn_alternative_spell_book">Alternative Spellbook</string>
    <string name="btn_bestiary">Bestiary</string>
    <string name="btn_inventory">Magical items</string>

    <!-- Search -->
    <string name="hint_search_campaign">Oblivion, The fall of London, etc.</string>
...
