<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="section_my_lists">My Lists</string>

    <string name="title_my_spell_lists">Spellbooks</string>
    <string name="btn_my_spell_lists">Spellbooks</string>
    <string name="title_my_item_lists">Magical items</string>
    <string name="btn_my_item_lists">Magical items</string>
    <string name="title_my_bestiary_lists">Bestiaries</string>
    <string name="btn_my_bestiary_lists">Bestiaries</string>

    <string name="title_create_list">New List</string>
    <string name="btn_create_list">Create</string>
    <string name="btn_add_to_list">Add to a list</string>
    <string name="title_save_to_list">Save to...</string>

    <string name="hint_list_name">List name</string>

    <string name="btn_confirm">Confirm</string>
    <string name="btn_cancel">Cancel</string>

    <string name="message_list_is_empty">The list is empty</string>

    <string name="snackbar_removed_from_list">'%1$s' was removed from the list</string>
    <string name="snackbar_error_removing_from_list">Error removing '%1$s' from the list.</string>
    <string name="snackbar_list_deleted">List '%1$s' was deleted</string>
    <string name="snackbar_error_deleting_list">Error deleting list '%1$s'.</string>
    <string name="btn_undo">Undo</string>

    <string name="empty_list_browse_spells">Browse spells</string>
    <string name="empty_list_browse_creatures">Browse creatures</string>
    <string name="empty_list_browse_magical_items">Browse magical items</string>

    <string name="time_ago_now">Just now</string>

    <string name="btn_rename_list">Rename</string>
    <string name="dialog_rename_list_title">Rename list</string>
</resources>
